--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@
             width: 100vw; height: 100vh;
             background:
                 linear-gradient(180deg, rgba(0,0,0,0.6), rgba(0,0,0,0.85)),
-                url("asset/2D Pixel Dungeon Asset Pack/Dungeon_Tileset_at.png");
+                url("../asset/2D Pixel Dungeon Asset Pack/Dungeon_Tileset_at.png");
             background-size: cover;
             background-position: center;
             image-rendering: pixelated;
@@ -119,7 +119,7 @@
             inset: 0;
             z-index: -1;
             border-radius: inherit;
-            background: url("asset/2D Pixel Dungeon Asset Pack/interface/square_up_down_2.png") repeat;
+            background: url("../asset/2D Pixel Dungeon Asset Pack/interface/square_up_down_2.png") repeat;
             background-size: 20px 20px;
             image-rendering: pixelated;
             opacity: 0.22;
@@ -189,7 +189,7 @@
             inset: 0;
             z-index: -1;
             border-radius: inherit;
-            background: url("asset/2D Pixel Dungeon Asset Pack/interface/square_up_down_2.png") repeat;
+            background: url("../asset/2D Pixel Dungeon Asset Pack/interface/square_up_down_2.png") repeat;
             background-size: 16px 16px;
             image-rendering: pixelated;
             opacity: 0.5;
@@ -233,7 +233,7 @@
             position: absolute;
             inset: 0;
             z-index: -1;
-            background: url("asset/2D Pixel Dungeon Asset Pack/interface/square_up_down_1.png") repeat;
+            background: url("../asset/2D Pixel Dungeon Asset Pack/interface/square_up_down_1.png") repeat;
             background-size: 32px 32px;
             image-rendering: pixelated;
             opacity: 0.10;
@@ -318,7 +318,7 @@
             position: absolute;
             inset: 0;
             z-index: -1;
-            background: url("asset/2D Pixel Dungeon Asset Pack/interface/square_up_down_2.png") repeat;
+            background: url("../asset/2D Pixel Dungeon Asset Pack/interface/square_up_down_2.png") repeat;
             background-size: 16px 16px;
             image-rendering: pixelated;
             opacity: 0.5;
@@ -531,7 +531,7 @@
             position: absolute;
             inset: 0;
             z-index: -1;
-            background: url("asset/2D Pixel Dungeon Asset Pack/interface/square_up_down_2.png") repeat;
+            background: url("../asset/2D Pixel Dungeon Asset Pack/interface/square_up_down_2.png") repeat;
             background-size: 24px 24px;
             image-rendering: pixelated;
             opacity: 0.2;
@@ -577,7 +577,7 @@
             position: absolute;
             inset: 0;
             z-index: -1;
-            background: url("asset/2D Pixel Dungeon Asset Pack/interface/square_up_down_1.png") repeat;
+            background: url("../asset/2D Pixel Dungeon Asset Pack/interface/square_up_down_1.png") repeat;
             background-size: 32px 32px;
             image-rendering: pixelated;
             opacity: 0.12;
@@ -628,7 +628,7 @@
             position: absolute;
             inset: 0;
             z-index: -1;
-            background: url("asset/2D Pixel Dungeon Asset Pack/interface/square_up_down_2.png") repeat;
+            background: url("../asset/2D Pixel Dungeon Asset Pack/interface/square_up_down_2.png") repeat;
             background-size: 16px 16px;
             image-rendering: pixelated;
             opacity: 0.5;
@@ -889,7 +889,7 @@
             inset: 0;
             z-index: -1;
             border-radius: inherit;
-            background: url("asset/2D Pixel Dungeon Asset Pack/interface/square_up_down_2.png") repeat;
+            background: url("../asset/2D Pixel Dungeon Asset Pack/interface/square_up_down_2.png") repeat;
             background-size: 16px 16px;
             image-rendering: pixelated;
             opacity: 0.5;
@@ -956,7 +956,7 @@
             position: fixed;
             inset: 0;
             z-index: -1;
-            background: url("asset/2D Pixel Dungeon Asset Pack/interface/square_up_down_3.png") repeat;
+            background: url("../asset/2D Pixel Dungeon Asset Pack/interface/square_up_down_3.png") repeat;
             background-size: 48px 48px;
             image-rendering: pixelated;
             opacity: 0.08;
@@ -990,7 +990,7 @@
             inset: 0;
             z-index: -1;
             border-radius: inherit;
-            background: url("asset/2D Pixel Dungeon Asset Pack/interface/square_up_down_1.png") repeat;
+            background: url("../asset/2D Pixel Dungeon Asset Pack/interface/square_up_down_1.png") repeat;
             background-size: 32px 32px;
             image-rendering: pixelated;
             opacity: 0.15;
